# reone

./: .gitignore  CMakeLists.txt  CONCEPTS.md  CONTRIBUTORS  Dockerfile.emscripten
.github/actions/build-linux/: action.yml
.github/actions/build-windows/: action.yml
.github/workflows/: auto-assign.yml  build-gles.yml  build-test-linux.yml  build-test-windows.yml  build-wasm.yml  release-windows.yml
build-check/: CMakeCache.txt
build-web-check/: CMakeCache.txt
doc/: ci-actions-unblock.md  webassembly.md
docs/: documentation.md  plans.md
docs/brainstorms/: 2026-05-29-close-modawan-extract-slice1-requirements.md
docs/plans/: 2026-05-27-001-fix-wasm-pr-restore-debug-plan.md  2026-05-27-002-fix-wasm-ci-green-plan.md  2026-05-28-001-fix-wasm-ci-queue-and-runtime-plan.md  2026-05-28-002-wasm-ci-green-verify-plan.md  2026-05-28-003-unblock-wasm-ci-runners-plan.md  2026-05-28-004-wasm-ci-hosted-green-plan.md  2026-05-28-005-unstick-actions-runner-plan.md  2026-05-28-006-wasm-ci-maintain-plan.md  2026-05-28-007-wasm-pr-merge-conflicts-plan.md  2026-05-28-008-wasm-main-menu-browser-plan.md  2026-05-28-008-wasm-main-menu-playable-plan.md  2026-05-28-009-wasm-browser-playwright-verify-plan.md  2026-05-28-010-wasm-main-menu-retail-path-plan.md  2026-05-28-011-wasm-main-menu-steam-path-plan.md  2026-05-28-012-feat-wasm-newgame-module-render-plan.md  2026-05-29-002-fix-save-load-test-hardening-plan.md  2026-05-29-dataminer-installation-plan.md  2026-05-29-pykotor-installation-port-plan.md  2026-05-30-gles-cubemap-ibl-fallback-plan.md  2026-05-30-gles-mainmenu-character-fix-plan.md  2026-05-30-lfg-post-ship-verification-plan.md  2026-05-30-remove-dead-container-classes-plan.md  2026-06-03-gles-lfg-merge-ready-plan.md  2026-06-03-gles-lfg-verification-pass2-plan.md  2026-06-03-gles-warp-ibl-smoke-plan.md  2026-06-03-gles-wasm-master-ci-plan.md  2026-06-04-008-fix-gles-black-model-texture-plan.md  2026-06-04-gles-black-model-oit-fix-plan.md  2026-06-04-gles-lfg-pass10-closure-plan.md  2026-06-04-gles-lfg-pass5-merge-plan.md  2026-06-04-gles-lfg-pass6-downstream-plan.md  2026-06-04-gles-lfg-pass7-sync-plans-plan.md  2026-06-04-gles-lfg-pass8-closure-plan.md  2026-06-04-gles-lfg-pass9-closure-plan.md  2026-06-04-gles-pr7-merge-blockers-plan.md  2026-06-04-wasm-branch-archive-plan.md  2026-06-05-gles-lfg-pass11-modawan-handoff-plan.md  2026-06-10-gles-lfg-pass21-maintainer-gate-plan.md  2026-06-11-001-feat-modawan-extract-pr-plan.md  2026-06-12-001-feat-save-load-extract-integration-plan.md
docs/residual-review-findings/: e10db735-modawan-167-handoff.md
docs/solutions/logic-errors/: modawan-extract-director-save-scope-regression.md
docs/solutions/workflow-issues/: modawan-stacked-prs-strategy.md
evals/: README.md
glsl/: f_oit_blend.glsl  f_oit_particles.glsl  f_pbr_combine.glsl  f_pbr_grass.glsl  f_pbr_opaqmodel.glsl  f_pbr_ssao.glsl  f_pbr_ssr.glsl  f_pbr_walkmesh.glsl  f_pp_boxblur4.glsl  f_pp_fxaa.glsl  f_pp_gausblur13.glsl  f_pp_gausblur9.glsl  f_pp_medianfilt3.glsl  f_pp_medianfilt5.glsl  f_pp_sharpen.glsl  f_profiler.glsl  f_rtr_grass.glsl  f_rtr_opaqmodel.glsl  f_texnoper.glsl  i_envmap_cubemap_pool.glsl  i_gbuf.glsl  i_hashedalpha.glsl  i_normalmap.glsl  i_shadowmap.glsl  u_globals.glsl  v_billboard.glsl  v_model.glsl  v_passthrough.glsl  v_shadows.glsl  v_textBillboard.glsl  v_walkmesh.glsl
include/reone/audio/: mixer.h
include/reone/extract/: capsule.h  chitin.h  fileresource.h  finder.h  installation.h  lookupcontext.h  searchlocation.h
include/reone/game/: action.h  animations.h  attack.h  castspell.h  combat.h  console.h  contextaction.h  equipmentrules.h  game.h  itemdescription.h  journal.h  messagebus.h  minigame.h  object.h  party.h  pathfinder.h  projectiles.h  reputes.h  room.h  statussummary.h  swooprace.h  transitioncandidate.h  types.h  visualeffects.h
include/reone/graphics/: context.h  font.h  framebuffer.h  keyframetrack.h  mesh.h  options.h  pbrtextures.h  shaderregistry.h  texture.h  textureutil.h  types.h  uniformbuffer.h  uniforms.h  walkmesh.h  window.h
include/reone/gui/: control.h  gui.h  sceneinitializer.h  textinput.h  types.h
include/reone/input/: event.h
include/reone/json/: resource.h  util.h
include/reone/resource/: dialog.h  director.h  (+5 more)
scripts/: build.ps1  capture_logs.ps1  eval_smoke.ps1  run_k1.ps1  run_k2.ps1  smoke_test.ps1
src/: pch.h
src/apps/engine/: CMakeLists.txt  console.cpp  console.h  editor.cpp  editor.h  engine.cpp  engine.h  main.cpp  options.h  optionsparser.cpp
src/apps/gff2json/: CMakeLists.txt  main.cpp
src/apps/unerf/: CMakeLists.txt  main.cpp
src/common/: log.cpp
src/game/: game.cpp  objectselect.cpp  pathfinder.cpp  savedgame.cpp
src/libs/json/: CMakeLists.txt  gff.cpp  gvt.cpp  util.cpp
src/resource/: 2da.h  folder.cpp
src/script/: program.h
src/video/: bikfile.h
test/: CMakeLists.txt
test/extract/: capsule.cpp  chitin.cpp  fileresource.cpp  finder.cpp  installation.cpp
test/fixtures/: archive.h  audio.h  engine.cpp  engine.h  game.h  graphics.h  gui.h  resource.h  scene.h
test/game/: action.cpp  conversation.cpp  journal.cpp  messagebus.cpp  object.cpp  statussummary.cpp  transitioncandidate.cpp
test/graphics/: keyframetrack.cpp  walkmesh.cpp
test/json/: gff.cpp
test/resource/: director.cpp  lookup.cpp  resources.cpp  strings.cpp
test/scene/: model.cpp
test/system/: arrayref.cpp  cast.cpp  fileutil.cpp  smallset.cpp  smallvector.cpp  stringref.cpp  stringutil.cpp  textbuffer.cpp
tools/: erftool.cpp  keybiftool.cpp  rimtool.cpp
tools/gles/: assert_engine_bindir.sh  headless_x11.sh  smoke_headless_selftest.sh  smoke_menu_validate.sh  smoke_warp_validate.sh  with_headless_x11.sh
tools/web/: ci_build_wasm.sh  discover_game_root.py  gamefs.js  gen_game_manifest.py  install-wasm-runner-service.sh  module_mirror.json  patch_engine_embedded_preload.py  progress.md  requirements-smoke.txt  run_menu_smoke.sh  run_serve.ps1  serve.py  smoke_engine_menu.py  stage_minimal_web_game.py  test_serve_smoke.py  verify_wasm_bundle.py  web_bundle_paths.py
utils/: emacs.el
(+347 files in other folders)
